--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <h1>{{title}}</h1>
-<nav>
+<nav class="navbar">
   <a routerLink="/dashboard">Dashboard</a>
   <a routerLink="/heroes">Heroes</a>
+  <a routerLink="/hero-form">Hero Form</a>
 </nav>
 <router-outlet></router-outlet>
 <app-messages></app-messages>
+
